--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.0"
+    "react-scripts": "^4.0.3"
   },
   "proxy": "http://localhost:5000",
   "scripts": {
