--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "pg": "^7.18.2",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
-    "react-scripts": "3.4.0"
+    "react-scripts": "^4.0.3"
   },
   "proxy": "http://localhost:5000",
   "scripts": {
